--- a/src/project.css
+++ b/src/project.css
@@ -24,7 +24,9 @@ order: 0;
 flex-grow: 0;
 }
 
-.projectDisplay {
+div.projectDisplay {
     /* overflow-x: hidden; */
     display: block;
+    overflow-x: hidden;
+  overflow-y: auto;
   }
