--- a/src/projectDetails.css
+++ b/src/projectDetails.css
@@ -115,6 +115,7 @@
     font-size: 12px;
     line-height: 15px;
     letter-spacing: 0.01em;
+    border: none;
   }
   
   #projectDetails td{
@@ -131,6 +132,7 @@
     font-size: 12px;
     line-height: 15px;
     letter-spacing: 0.01em;
+    float: center;
   }
 
   #projectDetails .projectDescription{
